--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,26 +1,46 @@
 .wrapper{
     padding-left: 18px;
+    padding-right: 18px;    
     overflow: hidden;
-    padding-right: 18px;
     max-width: 1234px;
     margin-right: auto;
     margin-left: auto;
 
-&--medium{
-    max-width: 976px;
- }
+    &--no-padding-until-medium{
+        padding-left: 0px;
+        padding-right: 0px;
 
-&--b-margin{
-    margin-bottom: 1rem;
-
-    @mixin atSmall{
-        margin-bottom: 3.875rem;
+        @mixin atMedium{
+            padding-left: 18px;
+            padding-right: 18px; 
+        }
     }
- }
 
- .wrapper{
-     padding-left: 0;
-     padding-right: 0;
- }
+    &--no-padding-until-large{
+        padding-left: 0px;
+        padding-right: 0px;
+
+        @mixin atLarge{
+            padding-left: 18px;
+            padding-right: 18px; 
+        }
+    }
+
+    &--medium{
+        max-width: 976px;
+    }
+
+    &--b-margin{
+        margin-bottom: 1rem;
+
+        @mixin atSmall{
+            margin-bottom: 3.875rem;
+        }
+    }
+
+    .wrapper{
+        padding-left: 0;
+        padding-right: 0;
+    }
 
 }
